--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,17 @@
   position: relative;
   justify-content: center;
   align-items: center;
-  height: 780px;
-  width: 400px;
+  height: 660px;
+  width: 335px;
   background:var(--dark-color);
   border-radius: 30px;
   flex-direction: column;
   overflow: hidden;
 }
-@media (min-width:400px) {
+@media (min-width:335px) {
   .card{
-    max-width: 360px;
-    max-height: 700px;
+    max-width: 335px;
+    max-height: 660px;
   }
 }
 .display{
@@ -39,17 +39,17 @@
   justify-content: center;
   align-items: center;
   height: 18%;
-  width: 385px;
+  width: 94%;
   background:var(--white-color);
   flex-direction: column;
   border-radius: 20px;
   overflow: hidden;
   top: 2px;
 }
-@media (min-width:400px) {
+@media (min-width:335px) {
   .display{
-    max-width: 330px;
-    max-height: 14%;
+    max-width: 90%;
+    max-height: 16%;
   }
 }
 .displayText{
@@ -58,16 +58,16 @@
   justify-content: flex-end;
   align-items: center;
   height: 100%;
-  width: 385px;
+  width: 100%;
   background:var(--white-color);
   font-family: "Poppins";
   font-weight: 700;
   font-size: 25px;
 }
-@media (min-width:400px) {
+@media (min-width:335px) {
   .displayText{
-    max-width: 360px;
-    max-height: 14%;
+    max-width: 90%;
+    max-height: 90%;
   }
 }
 .buttonsPanel{
@@ -90,14 +90,19 @@
   background: var(--dark-color);
   gap: 10px;
 }
-
+@media (min-width:335px){
+  .gridOne{
+    height:12%;
+    width: 100%;
+  }
+}
 .button{
   display: flex;
   position: relative;
   justify-content: center;
   align-items: center;
-  height:90%;
-  width: 23%;
+  height:70%;
+  width: 18%;
   background: var(--white-color);
   border-radius: 20%;
   font-family: "Poppins";
@@ -105,10 +110,10 @@
   font-size: 35px;
   cursor: pointer;
 }
-@media (min-width:400px) {
+@media (min-width:335px) {
   .button{
-    max-width: 18%;
-    max-height: 80%;
+    max-width: 16%;
+    max-height: 70%;
   }
 }
 .equals{
